--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "browser-sync": "^3.0.3",
     "gulp": "^5.0.0",
-    "gulp-rename": "^2.0.0"
+    "gulp-rename": "^2.0.0",
+    "modern-normalize": "^3.0.1"
   }
 }
