--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "sass": "^1.85.1"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "browser-sync": "^3.0.3",
     "gulp": "^5.0.0",
     "gulp-rename": "^2.0.0",
