--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "devDependencies": {
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-sass": "^6.0.1",
-    "sass": "^1.85.1"
-  },
-  "dependencies": {
-    "animate.css": "^4.1.1",
     "browser-sync": "^3.0.3",
-    "gulp": "^5.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^9.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-rename": "^2.0.0",
-    "modern-normalize": "^3.0.1"
+    "gulp-sass": "^6.0.1",
+    "sass": "^1.86.1"
   }
 }
